--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         </div>
         <div class="grid-x grid-padding-x">
           <div
-            class="cell small-12 medium-3 large-4 grid-marging-x expanded"
+            class="cell small-12 medium-3 large-4 expanded"
             id="search-city-body"
           >
             <span class="search-city-text">Search for a City:</span>
             <input class="input-city" />
-            <button class="button expanded" type="button">Submit</button>
+            <button class="button expanded" type="button" id="submitBtn">
+              Submit
+            </button>
+            <hr />
           </div>
-          <div class="cell small-12 medium-9 large-8 grid-marging-x">
+          <div class="cell small-12 medium-9 large-8 grid-padding-y">
             <div
-              class="cell grid-y small-12 medium-9 large-8 grid-padding-x"
+              class="cell grid-y small-12 medium-9 large-8 grid-padding-y"
               id="present-weather-info"
             >
               <h4 id="city-name">Madison</h4>
@@ -40,16 +43,49 @@
               <span id="city-uv-index">UV Index: </span>
             </div>
             <div
-              class="cell small-12 medium-9 large-8 grid-padding-x"
+              class="cell small-12 medium-9 large-8"
               id="future-weather-info"
             >
               <span id="future-weather-text">5-Day Forecast</span>
-              <div class="cell grid-x small-up-3 medium-up-5">
-                <div class="card">stuf</div>
-                <div class="card">stuf</div>
-                <div class="card">stuf</div>
-                <div class="card">stuf</div>
-                <div class="card">stuf</div>
+              <div class="cell grid-x small-up-2 medium-up-6">
+                <div class="card medium-2 small-2 large-2">
+                  <span>Date element</span>
+                  <span>icon element</span>
+
+                  <span>Temp element</span>
+                  <span>Wind element</span>
+                  <span>Humidity element</span>
+                </div>
+                <div class="card medium-2 small-2 large-2">
+                  <span>Date element</span>
+                  <span>icon element</span>
+
+                  <span>Temp element</span>
+                  <span>Wind element</span>
+                  <span>Humidity element</span>
+                </div>
+                <div class="card medium-2 small-2 large-2">
+                  <span>Date element</span>
+                  <span>icon element</span>
+
+                  <span>Temp element</span>
+                  <span>Wind element</span>
+                  <span>Humidity element</span>
+                </div>
+                <div class="card medium-2 small-2 large-2">
+                  <span>Date element</span>
+                  <span>icon element</span>
+
+                  <span>Temp element</span>
+                  <span>Wind element</span>
+                  <span>Humidity element</span>
+                </div>
+                <div class="card medium-2 small-2 large-2">
+                  <span>Date element</span>
+                  <span>Temp element</span>
+                  <span>Wind element</span>
+                  <span>Humidity element</span>
+                </div>
               </div>
             </div>
           </div>
