--- a/index.html
+++ b/index.html
@@ -20,71 +20,28 @@
           <h3>Weather Dashboard</h3>
         </div>
         <div class="grid-x grid-padding-x">
-          <div
-            class="cell small-12 medium-3 large-4 expanded"
-            id="search-city-body"
-          >
+          <div class="cell small-12 medium-3 large-3" id="search-city-body">
             <span class="search-city-text">Search for a City:</span>
             <input class="input-city" />
-            <button class="button expanded" type="button" id="submitBtn">
-              Submit
-            </button>
+            <button class="button" type="button" id="submitBtn">Submit</button>
             <hr />
           </div>
-          <div class="cell small-12 medium-9 large-8 grid-padding-y">
+          <div class="cell small-12 medium-9 large-9 grid-padding-y">
             <div
               class="cell grid-y small-12 medium-9 large-8 grid-padding-y"
               id="present-weather-info"
             >
-              <h4 id="city-name">Madison</h4>
-              <span id="city-temp">Temp: </span>
-              <span id="city-wind">Wind: </span>
-              <span id="city-humidity">Humidity: </span>
-              <span id="city-uv-index">UV Index: </span>
+             <!-- present weather is displayed here dunamically  -->
             </div>
             <div
-              class="cell small-12 medium-9 large-8"
+              class="cell small-12 medium-9 large-8 "
               id="future-weather-info"
             >
-              <span id="future-weather-text">5-Day Forecast</span>
-              <div class="cell grid-x small-up-2 medium-up-6">
-                <div class="card medium-2 small-2 large-2">
-                  <span>Date element</span>
-                  <span>icon element</span>
-
-                  <span>Temp element</span>
-                  <span>Wind element</span>
-                  <span>Humidity element</span>
-                </div>
-                <div class="card medium-2 small-2 large-2">
-                  <span>Date element</span>
-                  <span>icon element</span>
-
-                  <span>Temp element</span>
-                  <span>Wind element</span>
-                  <span>Humidity element</span>
-                </div>
-                <div class="card medium-2 small-2 large-2">
-                  <span>Date element</span>
-                  <span>icon element</span>
-
-                  <span>Temp element</span>
-                  <span>Wind element</span>
-                  <span>Humidity element</span>
-                </div>
-                <div class="card medium-2 small-2 large-2">
-                  <span>Date element</span>
-                  <span>icon element</span>
-
-                  <span>Temp element</span>
-                  <span>Wind element</span>
-                  <span>Humidity element</span>
-                </div>
-                <div class="card medium-2 small-2 large-2">
-                  <span>Date element</span>
-                  <span>Temp element</span>
-                  <span>Wind element</span>
-                  <span>Humidity element</span>
+              <span id="future-weather-text">5-Day Forecast:</span>
+              <div
+                class="cell grid-x small-up-2 medium-up-6 align-justify"
+                id="future-weather-container"></div>
+              <!-- weather cards are displayed here dynamically  -->
                 </div>
               </div>
             </div>
@@ -101,6 +58,11 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.6.3/js/foundation.min.js"
       integrity="sha512-9cXmvmK1gIDw3Tol6Xg/1SUls/CvBMgedu1aDjT519sQzy7jk+LoezyQqlzClW2LgXww4xEyuqtofg7PtWteLQ=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"
+      integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/weatherMe.js"></script>
