--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <input class="input-city" />
             <button class="button" type="button" id="submitBtn">Submit</button>
             <hr />
+            <!-- searched city buttons added here -->
+            <div class="searched-cities"> </div>
           </div>
           <div class="cell small-12 medium-9 large-9 grid-padding-y">
             <div
